// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`H5PEditor alterLibrarySemantics does not mutate semantics and alters the correct values (H5P.Blanks) 1`] = `
[
  {
    "default": "default",
    "name": "notmodified",
    "type": "group",
  },
  {
    "description": "These options will let you control how the task behaves.",
    "fields": [
      {
        "default": false,
        "name": "caseSensitive",
        "type": "boolean",
      },
    ],
    "importance": "low",
    "label": "Behavioural settings",
    "name": "behaviour",
    "optional": true,
    "type": "group",
  },
  {
    "importance": "medium",
    "label": "Summary Solution",
    "name": "summarySolution",
    "optional": true,
    "tags": [
      "REMOVED FOR BREVITY. SEE _supportedTags FOR FULL LIST",
    ],
    "tagsHash": "a95edb5e3e02ceb1119cd424e8ae4dbe01633480",
    "type": "text",
    "widget": "html",
  },
  {
    "importance": "medium",
    "label": "Detailed Solution",
    "name": "detailedSolution",
    "optional": true,
    "tags": [
      "REMOVED FOR BREVITY. SEE _supportedTags FOR FULL LIST",
    ],
    "tagsHash": "a95edb5e3e02ceb1119cd424e8ae4dbe01633480",
    "type": "text",
    "widget": "html",
  },
]
`;

exports[`H5PEditor alterLibrarySemantics does not mutate semantics and alters the correct values (H5P.MultiChoice) 1`] = `
[
  {
    "default": "default",
    "name": "notmodified",
    "type": "group",
  },
  {
    "description": "These options will let you control how the task behaves.",
    "fields": [
      {
        "default": false,
        "name": "randomAnswers",
        "type": "text",
      },
    ],
    "importance": "low",
    "label": "Behavioural settings",
    "name": "behaviour",
    "optional": true,
    "type": "group",
  },
  {
    "importance": "medium",
    "label": "Summary Solution",
    "name": "summarySolution",
    "optional": true,
    "tags": [
      "REMOVED FOR BREVITY. SEE _supportedTags FOR FULL LIST",
    ],
    "tagsHash": "f083f58f413d705db00477ac77e2eab543b21d35",
    "type": "text",
    "widget": "html",
  },
  {
    "importance": "medium",
    "label": "Detailed Solution",
    "name": "detailedSolution",
    "optional": true,
    "tags": [
      "REMOVED FOR BREVITY. SEE _supportedTags FOR FULL LIST",
    ],
    "tagsHash": "f083f58f413d705db00477ac77e2eab543b21d35",
    "type": "text",
    "widget": "html",
  },
]
`;

exports[`H5PEditor alterLibrarySemantics does not mutate semantics and alters the correct values (H5P.QuestionSet) 1`] = `
[
  {
    "importance": "medium",
    "label": "Question Stimulus",
    "name": "questionStimulus",
    "optional": true,
    "tags": [
      "REMOVED FOR BREVITY. SEE _supportedTags FOR FULL LIST",
    ],
    "tagsHash": "a95edb5e3e02ceb1119cd424e8ae4dbe01633480",
    "type": "text",
    "widget": "html",
  },
  {
    "default": "default",
    "name": "notmodified",
    "type": "group",
  },
  {
    "field": {
      "name": "question",
      "options": [
        "H5P.MultiChoice 1.16",
      ],
      "type": "library",
    },
    "name": "questions",
    "type": "text",
  },
  {
    "default": false,
    "name": "randomQuestions",
    "type": "boolean",
  },
]
`;
